deploy: 3292f8ae44a431f04df15cdbdc1f361af4fb92ff

--- a/reading/index.html
+++ b/reading/index.html
@@ -541,7 +541,7 @@
     <div class="row course-info">
         <div class="col-md-7">
             <p>
-                <strong>PM566: Introduction to Health Data Science - PM 566 (Fall 2022)</strong><br>
+                <strong>PM566: Introduction to Health Data Science - PM 566 (Fall 2023)</strong><br>
             </p>
             <p>
                 <a href="https://www.usc.edu/" target="_blank" rel="noopener">University of Southern California</a>
@@ -551,11 +551,11 @@
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    Kim Siegmund</a>
+                    Kelly Street</a>
             </p>
             <p>
-                <a href="mailto:kims@usc.edu"><i class="fas fa-envelope"></i>
-                    kims@usc.edu</a>
+                <a href="mailto:kelly.street@usc.edu"><i class="fas fa-envelope"></i>
+                    kelly.street@usc.edu</a>
             </p>
         </div>
 
