--- a/schedule/index.html
+++ b/schedule/index.html
@@ -30,8 +30,8 @@
   
     
   
-  <meta name="description" content="  Here’s your roadmap for the semester!
-  Readings should be completed before each class session  Class materials (slides, in-class activities, etc.) will be added on the day of class  Assignments are due by 11:59 PM on the day they are due    Week 1 (8/24) Introduction to Data Science tools: R, Python, Markdown, Git, command line tools       Week 2 (8/31) Version Control &amp; Reproducible Research       Week 3 (9/7) Exploratory data analysis       Week 4 (9/14) Data visualization       Week 5 (9/21) Data cleaning and wrangling      Week 6 (9/28) Text Mining       Week 7 (10/5) Scraping, APIs, and Regular Expressions      Week 8 (10/12) Fall Recess (No class)         Week 9 (10/19) Midterm Exam        Week 10 (10/26) High performance computing, cloud computing       Week 11 (11/2) Managing big data, SQL and non-SQL languages, Google BigQuery      Week 12 (11/9) Interactive visualization and effective data communication I       Week 13 (11/16) Interactive visualization and effective data communication II      Week 14 (11/23) Thanksgiving Holiday         Week 15 (11/30) Final project workshop: review project progress, preliminary presentations      Week 16 (12/7) Final Project       ">
+  <meta name="description" content="Here’s your roadmap for the semester!
+  Readings should be completed before each class session  Class materials (slides, in-class activities, etc.) will be added on the day of class  Assignments are due by 11:59 PM on the day they are due    Week 1 (8/25) Introduction to Data Science tools: R, Python, Markdown, Git, command line tools       Week 2 (9/1) Version Control &amp; Reproducible Research       Week 3 (9/8) Exploratory data analysis       Week 4 (9/15) Data visualization       Week 5 (9/22) Data cleaning and wrangling      Week 6 (9/29) Text Mining       Week 7 (10/6) Scraping, APIs, and Regular Expressions      Week 8 (10/13) Fall Recess (No class).">
 
   
   <link rel="alternate" hreflang="en-us" href="https://uscbiostats.github.io/PM566/schedule/">
@@ -246,8 +246,8 @@
   <meta property="og:site_name" content="Introduction to Health Data Science - PM 566">
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/schedule/">
   <meta property="og:title" content="Schedule | Introduction to Health Data Science - PM 566">
-  <meta property="og:description" content="  Here’s your roadmap for the semester!
-  Readings should be completed before each class session  Class materials (slides, in-class activities, etc.) will be added on the day of class  Assignments are due by 11:59 PM on the day they are due    Week 1 (8/24) Introduction to Data Science tools: R, Python, Markdown, Git, command line tools       Week 2 (8/31) Version Control &amp; Reproducible Research       Week 3 (9/7) Exploratory data analysis       Week 4 (9/14) Data visualization       Week 5 (9/21) Data cleaning and wrangling      Week 6 (9/28) Text Mining       Week 7 (10/5) Scraping, APIs, and Regular Expressions      Week 8 (10/12) Fall Recess (No class)         Week 9 (10/19) Midterm Exam        Week 10 (10/26) High performance computing, cloud computing       Week 11 (11/2) Managing big data, SQL and non-SQL languages, Google BigQuery      Week 12 (11/9) Interactive visualization and effective data communication I       Week 13 (11/16) Interactive visualization and effective data communication II      Week 14 (11/23) Thanksgiving Holiday         Week 15 (11/30) Final project workshop: review project progress, preliminary presentations      Week 16 (12/7) Final Project       "><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
+  <meta property="og:description" content="Here’s your roadmap for the semester!
+  Readings should be completed before each class session  Class materials (slides, in-class activities, etc.) will be added on the day of class  Assignments are due by 11:59 PM on the day they are due    Week 1 (8/25) Introduction to Data Science tools: R, Python, Markdown, Git, command line tools       Week 2 (9/1) Version Control &amp; Reproducible Research       Week 3 (9/8) Exploratory data analysis       Week 4 (9/15) Data visualization       Week 5 (9/22) Data cleaning and wrangling      Week 6 (9/29) Text Mining       Week 7 (10/6) Scraping, APIs, and Regular Expressions      Week 8 (10/13) Fall Recess (No class)."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
   
     
@@ -529,7 +529,7 @@
 <table class="table schedule" style="max-width:100%">
     <tbody>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 1 (8/24)</td>
+            <td align="right" style="width:20%;text-align:right">Week 1 (8/25)</td>
             <td style="width:50%;text-align:left">Introduction to Data Science tools: R, Python, Markdown, Git, command line tools</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/01-reading/">
@@ -542,7 +542,7 @@
             </td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 2 (8/31)</td>
+            <td align="right" style="width:20%;text-align:right">Week 2 (9/1)</td>
             <td style="width:50%;text-align:left">Version Control &amp; Reproducible Research</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/02-reading/">
@@ -555,7 +555,7 @@
             </td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 3 (9/7)</td>
+            <td align="right" style="width:20%;text-align:right">Week 3 (9/8)</td>
             <td style="width:50%;text-align:left">Exploratory data analysis</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/03-reading/">
@@ -568,7 +568,7 @@
             </td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 4 (9/14)</td>
+            <td align="right" style="width:20%;text-align:right">Week 4 (9/15)</td>
             <td style="width:50%;text-align:left">Data visualization</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/04-reading/">
@@ -581,7 +581,7 @@
             </td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 5 (9/21)</td>
+            <td align="right" style="width:20%;text-align:right">Week 5 (9/22)</td>
             <td style="width:50%;text-align:left">Data cleaning and wrangling</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/05-reading/">
@@ -593,7 +593,7 @@
                     <i class="fas fa-laptop-code"></i></a></td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 6 (9/28)</td>
+            <td align="right" style="width:20%;text-align:right">Week 6 (9/29)</td>
             <td style="width:50%;text-align:left">Text Mining</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/06-reading/">
@@ -606,7 +606,7 @@
             </td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 7 (10/5)</td>
+            <td align="right" style="width:20%;text-align:right">Week 7 (10/6)</td>
             <td style="width:50%;text-align:left">Scraping, APIs, and Regular Expressions</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/07-reading/">
@@ -618,24 +618,8 @@
                     <i class="fas fa-laptop-code"></i></a></td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 8 (10/12)</td>
-            <td style="width:50%;text-align:left">Fall Recess (No class)</td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-book-reader fa-lg"></i></font>
-            </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-chalkboard-teacher fa-lg"></i></font>
-            </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-laptop-code"></i></font>
-            </td>
-        </tr>
-        <tr>
-            <td align="right" style="width:20%;text-align:right">Week 9 (10/19)</td>
-            <td style="width:50%;text-align:left">Midterm Exam</td>
+            <td align="right" style="width:20%;text-align:right">Week 8 (10/13)</td>
+            <td style="width:50%;text-align:left">Fall Recess (No class). Midterm Exam</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-book-reader fa-lg"></i></font>
@@ -649,8 +633,8 @@
                     <i class="fas fa-laptop-code"></i></a></td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 10 (10/26)</td>
-            <td style="width:50%;text-align:left">High performance computing, cloud computing</td>
+            <td align="right" style="width:20%;text-align:right">Week 9 (10/20)</td>
+            <td style="width:50%;text-align:left">(Midterm Exam due) High performance computing, cloud computing</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/09-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
@@ -662,7 +646,7 @@
             </td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 11 (11/2)</td>
+            <td align="right" style="width:20%;text-align:right">Week 10 (10/27)</td>
             <td style="width:50%;text-align:left">Managing big data, SQL and non-SQL languages, Google BigQuery</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/10-reading/">
@@ -674,7 +658,7 @@
                     <i class="fas fa-laptop-code"></i></a></td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 12 (11/9)</td>
+            <td align="right" style="width:20%;text-align:right">Week 11 (11/3)</td>
             <td style="width:50%;text-align:left">Interactive visualization and effective data communication I</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/11-reading/">
@@ -687,7 +671,23 @@
             </td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 13 (11/16)</td>
+            <td align="right" style="width:20%;text-align:right">Week 12 (11/10)</td>
+            <td style="width:50%;text-align:left">Veterans Day (No class)</td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-book-reader fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-chalkboard-teacher fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-laptop-code"></i></font>
+            </td>
+        </tr>
+        <tr>
+            <td align="right" style="width:20%;text-align:right">Week 13 (11/17)</td>
             <td style="width:50%;text-align:left">Interactive visualization and effective data communication II</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/12-reading/">
@@ -699,7 +699,7 @@
                     <i class="fas fa-laptop-code"></i></a></td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 14 (11/23)</td>
+            <td align="right" style="width:20%;text-align:right">Week 14 (11/24)</td>
             <td style="width:50%;text-align:left">Thanksgiving Holiday</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
@@ -715,7 +715,7 @@
             </td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 15 (11/30)</td>
+            <td align="right" style="width:20%;text-align:right">Week 15 (12/1)</td>
             <td style="width:50%;text-align:left">Final project workshop: review project progress, preliminary presentations</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/13-reading/">
@@ -727,7 +727,7 @@
                     <i class="fas fa-laptop-code"></i></a></td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 16 (12/7)</td>
+            <td align="right" style="width:20%;text-align:right">Week 16 (12/8)</td>
             <td style="width:50%;text-align:left">Final Project</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/14-reading/">
@@ -851,7 +851,7 @@
     <div class="row course-info">
         <div class="col-md-7">
             <p>
-                <strong>PM566: Introduction to Health Data Science - PM 566 (Fall 2022)</strong><br>
+                <strong>PM566: Introduction to Health Data Science - PM 566 (Fall 2023)</strong><br>
             </p>
             <p>
                 <a href="https://www.usc.edu/" target="_blank" rel="noopener">University of Southern California</a>
@@ -861,11 +861,11 @@
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    Kim Siegmund</a>
+                    Kelly Street</a>
             </p>
             <p>
-                <a href="mailto:kims@usc.edu"><i class="fas fa-envelope"></i>
-                    kims@usc.edu</a>
+                <a href="mailto:kelly.street@usc.edu"><i class="fas fa-envelope"></i>
+                    kelly.street@usc.edu</a>
             </p>
         </div>
 
