--- a/assignment/08-midterm/index.html
+++ b/assignment/08-midterm/index.html
@@ -647,7 +647,7 @@ The first step in any data analysis is to have a dataset for which you have form
     <div class="row course-info">
         <div class="col-md-7">
             <p>
-                <strong>PM566: Introduction to Health Data Science - PM 566 (Fall 2022)</strong><br>
+                <strong>PM566: Introduction to Health Data Science - PM 566 (Fall 2023)</strong><br>
             </p>
             <p>
                 <a href="https://www.usc.edu/" target="_blank" rel="noopener">University of Southern California</a>
@@ -657,11 +657,11 @@ The first step in any data analysis is to have a dataset for which you have form
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    Kim Siegmund</a>
+                    Kelly Street</a>
             </p>
             <p>
-                <a href="mailto:kims@usc.edu"><i class="fas fa-envelope"></i>
-                    kims@usc.edu</a>
+                <a href="mailto:kelly.street@usc.edu"><i class="fas fa-envelope"></i>
+                    kelly.street@usc.edu</a>
             </p>
         </div>
 
