--- a/reading/02-reading/index.html
+++ b/reading/02-reading/index.html
@@ -664,7 +664,7 @@ a more technical overview of what’s git and what happens under-the-hood.</li>
     <div class="row course-info">
         <div class="col-md-7">
             <p>
-                <strong>PM566: Introduction to Health Data Science - PM 566 (Fall 2022)</strong><br>
+                <strong>PM566: Introduction to Health Data Science - PM 566 (Fall 2023)</strong><br>
             </p>
             <p>
                 <a href="https://www.usc.edu/" target="_blank" rel="noopener">University of Southern California</a>
@@ -674,11 +674,11 @@ a more technical overview of what’s git and what happens under-the-hood.</li>
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    Kim Siegmund</a>
+                    Kelly Street</a>
             </p>
             <p>
-                <a href="mailto:kims@usc.edu"><i class="fas fa-envelope"></i>
-                    kims@usc.edu</a>
+                <a href="mailto:kelly.street@usc.edu"><i class="fas fa-envelope"></i>
+                    kelly.street@usc.edu</a>
             </p>
         </div>
 
