--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -625,67 +625,67 @@
 <p><table class="table schedule" style="max-width:100%">
     <tbody>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 1 (8/24)</td>
+             <td align="right" style="width:20%;text-align:left">Week 1 (8/25)</td>
              <td style="width:50%;text-align:left">Introduction to Data Science tools: R, Python, Markdown, Git, command line tools</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 2 (8/31)</td>
+             <td align="right" style="width:20%;text-align:left">Week 2 (9/1)</td>
              <td style="width:50%;text-align:left">Version Control &amp; Reproducible Research</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 3 (9/7)</td>
+             <td align="right" style="width:20%;text-align:left">Week 3 (9/8)</td>
              <td style="width:50%;text-align:left">Exploratory data analysis</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 4 (9/14)</td>
+             <td align="right" style="width:20%;text-align:left">Week 4 (9/15)</td>
              <td style="width:50%;text-align:left">Data visualization</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 5 (9/21)</td>
+             <td align="right" style="width:20%;text-align:left">Week 5 (9/22)</td>
              <td style="width:50%;text-align:left">Data cleaning and wrangling</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 6 (9/28)</td>
+             <td align="right" style="width:20%;text-align:left">Week 6 (9/29)</td>
              <td style="width:50%;text-align:left">Text Mining</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 7 (10/5)</td>
+             <td align="right" style="width:20%;text-align:left">Week 7 (10/6)</td>
              <td style="width:50%;text-align:left">Scraping, APIs, and Regular Expressions</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 8 (10/12)</td>
-             <td style="width:50%;text-align:left">Fall Recess (No class)</td>
+             <td align="right" style="width:20%;text-align:left">Week 8 (10/13)</td>
+             <td style="width:50%;text-align:left">Fall Recess (No class). Midterm Exam</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 9 (10/19)</td>
-             <td style="width:50%;text-align:left">Midterm Exam</td>
+             <td align="right" style="width:20%;text-align:left">Week 9 (10/20)</td>
+             <td style="width:50%;text-align:left">(Midterm Exam due) High performance computing, cloud computing</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 10 (10/26)</td>
-             <td style="width:50%;text-align:left">High performance computing, cloud computing</td>
-            </tr>
-            <tr>
-             <td align="right" style="width:20%;text-align:left">Week 11 (11/2)</td>
+             <td align="right" style="width:20%;text-align:left">Week 10 (10/27)</td>
              <td style="width:50%;text-align:left">Managing big data, SQL and non-SQL languages, Google BigQuery</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 12 (11/9)</td>
+             <td align="right" style="width:20%;text-align:left">Week 11 (11/3)</td>
              <td style="width:50%;text-align:left">Interactive visualization and effective data communication I</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 13 (11/16)</td>
+             <td align="right" style="width:20%;text-align:left">Week 12 (11/10)</td>
+             <td style="width:50%;text-align:left">Veterans Day (No class)</td>
+            </tr>
+            <tr>
+             <td align="right" style="width:20%;text-align:left">Week 13 (11/17)</td>
              <td style="width:50%;text-align:left">Interactive visualization and effective data communication II</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 14 (11/23)</td>
+             <td align="right" style="width:20%;text-align:left">Week 14 (11/24)</td>
              <td style="width:50%;text-align:left">Thanksgiving Holiday</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 15 (11/30)</td>
+             <td align="right" style="width:20%;text-align:left">Week 15 (12/1)</td>
              <td style="width:50%;text-align:left">Final project workshop: review project progress, preliminary presentations</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 16 (12/7)</td>
+             <td align="right" style="width:20%;text-align:left">Week 16 (12/8)</td>
              <td style="width:50%;text-align:left">Final Project</td>
             </tr>
 
@@ -858,7 +858,7 @@ Confidential Lifestyle Redesign services for USC students to support health prom
     <div class="row course-info">
         <div class="col-md-7">
             <p>
-                <strong>PM566: Introduction to Health Data Science - PM 566 (Fall 2022)</strong><br>
+                <strong>PM566: Introduction to Health Data Science - PM 566 (Fall 2023)</strong><br>
             </p>
             <p>
                 <a href="https://www.usc.edu/" target="_blank" rel="noopener">University of Southern California</a>
@@ -868,11 +868,11 @@ Confidential Lifestyle Redesign services for USC students to support health prom
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    Kim Siegmund</a>
+                    Kelly Street</a>
             </p>
             <p>
-                <a href="mailto:kims@usc.edu"><i class="fas fa-envelope"></i>
-                    kims@usc.edu</a>
+                <a href="mailto:kelly.street@usc.edu"><i class="fas fa-envelope"></i>
+                    kelly.street@usc.edu</a>
             </p>
         </div>
 
