deploy: dff1cdcad432a6093e2ecd372eac69e506176974

--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content="Course objectives Learning Objectives Course Notes Technological Proficiency and Hardware/Software Required Readings and Supplementary Materials Supplementary References Description and Assessment of Assignments Grading Breakdown Assignment Submission Policy Schedule Statement on academic conduct and support systems  Academic Conduct: Students and Disability Accommodations: Support Systems:    Course objectives This course serves as an introduction to data science with focus on the acquisition and analysis of real-life data.">
+  <meta name="description" content="Course objectives Learning Objectives Course Notes Technological Proficiency and Hardware/Software Required Readings and Supplementary Materials Supplementary References Description and Assessment of Assignments Grading Breakdown Assignment Submission Policy Schedule Statement on academic conduct and support systems  Academic Conduct: Students and Disability Accommodations: Support Systems:    Course objectives This course serves as an introduction to data science with a focus on the acquisition and analysis of real-life data.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://uscbiostats.github.io/PM566/syllabus/">
@@ -245,7 +245,7 @@
   <meta property="og:site_name" content="Introduction to Health Data Science - PM 566">
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/syllabus/">
   <meta property="og:title" content="Syllabus | Introduction to Health Data Science - PM 566">
-  <meta property="og:description" content="Course objectives Learning Objectives Course Notes Technological Proficiency and Hardware/Software Required Readings and Supplementary Materials Supplementary References Description and Assessment of Assignments Grading Breakdown Assignment Submission Policy Schedule Statement on academic conduct and support systems  Academic Conduct: Students and Disability Accommodations: Support Systems:    Course objectives This course serves as an introduction to data science with focus on the acquisition and analysis of real-life data."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
+  <meta property="og:description" content="Course objectives Learning Objectives Course Notes Technological Proficiency and Hardware/Software Required Readings and Supplementary Materials Supplementary References Description and Assessment of Assignments Grading Breakdown Assignment Submission Policy Schedule Statement on academic conduct and support systems  Academic Conduct: Students and Disability Accommodations: Support Systems:    Course objectives This course serves as an introduction to data science with a focus on the acquisition and analysis of real-life data."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
   
     
@@ -539,14 +539,14 @@
 
 <div id="course-objectives" class="section level2">
 <h2>Course objectives</h2>
-<p>This course serves as an introduction to data science with focus on the acquisition and analysis of real-life data. Students will learn the toolsets needed to 1) create workable and reproducible datasets by accessing, scraping, sampling and cleaning data; 2) conduct exploratory data analysis and data visualizations; 3) apply statistical tools to learn from data; and 4) build functions and basic apps. Coding languages R and Python will be used.</p>
+<p>This course serves as an introduction to data science with a focus on the acquisition and analysis of real-life data. Students will learn the toolsets needed to 1) create workable and reproducible datasets by accessing, scraping, sampling and cleaning data; 2) conduct exploratory data analysis and data visualization; 3) apply statistical tools to learn from data; and 4) build functions and basic apps. Coding languages R and Python will be used.</p>
 </div>
 <div id="learning-objectives" class="section level2">
 <h2>Learning Objectives</h2>
-<p>Through this course, students will become familiar with the techniques used in Data Science, applied to health-related datasets. Students will learn:</p>
+<p>Through this course, students will become familiar with the techniques used in data science, applied to health-related datasets. Students will learn:</p>
 <ul>
 <li>Programming in R, and associated tools Markdown, Git</li>
-<li>Data visualization – summarizing data through interpretable summaires</li>
+<li>Data visualization – summarizing data through interpretable summaries</li>
 <li>Data collection – data scraping, wrangling, cleaning, and sampling</li>
 <li>Exploratory data analysis – generating hypotheses and building intuition</li>
 <li>Basic statistical algorithms</li>
@@ -575,12 +575,13 @@
 <li>R for Data Science, 2017 Garrett Grolemund and Hadley Wickham. <a href="http://r4ds.had.co.nz/" class="uri">http://r4ds.had.co.nz/</a></li>
 <li>Exploratory Data Analysis with R, 2020 Roger Peng <a href="https://bookdown.org/rdpeng/exdata/" class="uri">https://bookdown.org/rdpeng/exdata/</a></li>
 <li>Mastering Software Development in R, 2017 Roger Peng, Sean Kross, Brooke Anderson <a href="https://bookdown.org/rdpeng/RProgDA/" class="uri">https://bookdown.org/rdpeng/RProgDA/</a></li>
+<li>R Packages, 2023 Hadley Wickham and Jennifer Bryan. <a href="https://r-pkgs.org/" class="uri">https://r-pkgs.org/</a></li>
 </ol>
 </div>
 <div id="description-and-assessment-of-assignments" class="section level2">
 <h2>Description and Assessment of Assignments</h2>
 <p><strong>Assignments:</strong> There will be 5 assignments given throughout the semester, approximately 1 every 2 weeks. Students may discuss the problems with one another, however, individual solutions must be submitted and copying will not be tolerated. All assignments must be completed in R Markdown, and submitted through the Github classes portal of the course. Late assignments will be penalized by 20% for each day past the due date.</p>
-<p><strong>Final Project:</strong> The final project will be to write a report for an analysis applied to a real-world dataset and to create a website that includes interactive visualizations to display data/results. The source code, website files, PDF report, will be uploaded to GitHub.</p>
+<p><strong>Final Project:</strong> The final project will be to write a report for an analysis applied to a real-world dataset and to create a website that includes interactive visualizations to display data/results. The source code, website files, and PDF report will be uploaded to GitHub.</p>
 <p><strong>Labs:</strong> Lab attendance is mandatory and participation in the lab is required and counts as part of the overall lab grade.</p>
 </div>
 <div id="grading-breakdown" class="section level2">
