deploy: 595130fe63c95503beb23aaa96567c6c135381ad

--- a/class/01-class/index.html
+++ b/class/01-class/index.html
@@ -31,7 +31,7 @@
     
   
   <meta name="description" content="  Lab Exercise link
-Download
+Download (click the “download” icon on the right, near the “Raw” button, then unzip the file)
  Slides link
  Links  The R Project for Statistical Computing R Studio   ">
 
@@ -249,7 +249,7 @@ Download
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/class/01-class/">
   <meta property="og:title" content="Look at Data / Up and Running in R and ggplot | Introduction to Health Data Science - PM 566">
   <meta property="og:description" content="  Lab Exercise link
-Download
+Download (click the “download” icon on the right, near the “Raw” button, then unzip the file)
  Slides link
  Links  The R Project for Statistical Computing R Studio   "><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
@@ -581,7 +581,7 @@ Download
 <div id="lab-exercise" class="section level2">
 <h2>Lab Exercise</h2>
 <p><a href="/PM566/labs/lab-01/01-lab.html">link</a></p>
-<p><a href="https://github.com/USCbiostats/PM566/blob/master/website/static/labs/lab-01/pm566-01-lab.zip">Download</a></p>
+<p><a href="https://github.com/USCbiostats/PM566/blob/master/website/static/labs/lab-01/pm566-01-lab.zip">Download</a> (click the “download” icon on the right, near the “Raw” button, then unzip the file)</p>
 </div>
 <div id="slides" class="section level2">
 <h2>Slides</h2>
