deploy: 9a4d67b0c6ca7498f15885e50d569858dbf92147

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -597,7 +597,7 @@ For this assignment, we will be analyzing data from USC’s Children’s Health 
       <div class="article-style">
         
           Learning goals In this lab, you are expected to learn/put in practice the following skills:
- Forking on GitHub Git workflow clone/commit/push Using pull requests (PR)  The last bit of the lab will deal with GitHub Classrooms. While this is not a fundamental tool for academia/industry, we will be using this tool throughout the course, meaning that your grade will depend on it :).
+ Forking a repository on GitHub Git workflow clone/commit/push Using pull requests (PR)  The last bit of the lab will deal with GitHub Classrooms. While this is not a fundamental tool for academia/industry, we will be using this tool throughout the course, meaning that your grade will depend on it :).
  Updating a single repo One of the most common tasks that people uses git for is for collaborating.
         
       </div>
