re-ran blogdown::build_site(build_rmd=TRUE) repeatedly, installing necessary packages until everything built successfully.

--- a/website/content/assignment/05-lab.html
+++ b/website/content/assignment/05-lab.html
@@ -1,6 +1,7 @@
 ---
 title: "Lab 05 - Data Wrangling"
 output: html_document
+date: 2021-09-23
 ---
 
 
@@ -132,7 +133,7 @@ stations &lt;- stations[n == 1,][, n := NULL]</code></pre>
 <li>Mean temperature, wind-speed, and atmospheric pressure.</li>
 </ul>
 <p>All by the levels described before.</p>
-<p>Knit the document, commit your changes, and push them to GitHub. If you’d like, you can take this time to include the link of <a href="https://github.com/USCbiostats/PM566/issues/23">the issue of the week</a> so that you let us know when you are done, e.g.,</p>
-<pre class="bash"><code>git commit -a -m &quot;Finalizing lab 5 https://github.com/USCbiostats/PM566/issues/23&quot;</code></pre>
+<p>Knit the document, commit your changes, and push them to GitHub. If you’d like, you can take this time to include the link of <a href="https://github.com/USCbiostats/PM566/issues/42">the issue of the week</a> so that you let us know when you are done, e.g.,</p>
+<pre class="bash"><code>git commit -a -m &quot;Finalizing lab 5 https://github.com/USCbiostats/PM566/issues/42&quot;</code></pre>
 </div>
 </div>
