--- a/website/content/schedule/index.html
+++ b/website/content/schedule/index.html
@@ -3,7 +3,6 @@ title: "Schedule"
 slug: schedule
 ---
 
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <p>Here’s your roadmap for the semester!</p>
@@ -13,4 +12,4 @@ slug: schedule
 <li><i class="fas fa-laptop-code"></i> Assignments are due by <strong>11:59 PM</strong> on the day they are due</li>
 </ul>
 <hr />
-{{% schedule %}}
+<p>{{% schedule %}}</p>
