deploy: 32bccf09c6ac053845302adb58d2d78d37e1380a

--- a/assignment/09-lab/index.html
+++ b/assignment/09-lab/index.html
@@ -524,7 +524,6 @@
 
     <div class="article-style">
       
-<script src="/PM566/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <div id="learning-goals" class="section level1">
@@ -663,7 +662,7 @@ in your terminal:</p>
 your Rmd file… :).</p>
 </div>
 </div>
-<div class="footnotes">
+<div class="footnotes footnotes-end-of-document">
 <hr />
 <ol>
 <li id="fn1"><p>In Fall 2021 we realized there were a couple of typos in the
