--- a/schedule/index.html
+++ b/schedule/index.html
@@ -516,7 +516,6 @@
 
     <div class="article-style">
       
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <p>Here’s your roadmap for the semester!</p>
@@ -526,7 +525,7 @@
 <li><i class="fas fa-laptop-code"></i> Assignments are due by <strong>11:59 PM</strong> on the day they are due</li>
 </ul>
 <hr />
-<table class="table schedule" style="max-width:100%">
+<p><table class="table schedule" style="max-width:100%">
     <tbody>
         <tr>
             <td align="right" style="width:20%;text-align:right">Week 1 (8/25)</td>
@@ -742,7 +741,7 @@
     </tbody>
 
 </table>
-
+</p>
 
     </div>
 
